RESOLVED FIXED119607
navigator.plugins has plugins in it when plugins are disabled
https://bugs.webkit.org/show_bug.cgi?id=119607
Summary navigator.plugins has plugins in it when plugins are disabled
Tim Horton
Reported 2013-08-08 16:49:52 PDT
... and it shouldn't! Except it actually should have PDFPlugin in it. But only application plugins. <rdar://problem/14678030>
Attachments
patch (11.99 KB, patch)
2013-08-08 17:02 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2013-08-08 17:02:38 PDT
Anders Carlsson
Comment 2 2013-08-08 17:08:07 PDT
Comment on attachment 208382 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=208382&action=review > Source/WebKit/mac/WebCoreSupport/WebPlatformStrategies.mm:134 > + if (Frame* frame = page->mainFrame()) { I don’t think Page::mainFrame can be null. > Source/WebKit2/WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:288 > + if (Frame* frame = page->mainFrame()) { Ditto.
Tim Horton
Comment 3 2013-08-08 23:44:18 PDT
Gustavo Noronha (kov)
Comment 4 2013-08-10 18:30:18 PDT
This patch seems to have caused a huge regression in the time it takes to create WebViews in GTK, according to my bisection (> 3 seconds when the java plugin is present - eek). It's now scanning all plugins when a new WebView is created, I guess it might be related to the changes to Settings::setPluginsEnabled, but haven't investigated in detail yet.
Tim Horton
Comment 5 2013-08-10 19:42:45 PDT
(In reply to comment #4) > This patch seems to have caused a huge regression in the time it takes to create WebViews in GTK, according to my bisection (> 3 seconds when the java plugin is present - eek). It's now scanning all plugins when a new WebView is created, I guess it might be related to the changes to Settings::setPluginsEnabled, but haven't investigated in detail yet. Hmm, we should make it only-refresh-if-you-already-have-cached-data.
Tim Horton
Comment 6 2013-08-10 19:42:57 PDT
(In reply to comment #5) > (In reply to comment #4) > > This patch seems to have caused a huge regression in the time it takes to create WebViews in GTK, according to my bisection (> 3 seconds when the java plugin is present - eek). It's now scanning all plugins when a new WebView is created, I guess it might be related to the changes to Settings::setPluginsEnabled, but haven't investigated in detail yet. > > Hmm, we should make it only-refresh-if-you-already-have-cached-data. Please file another bug and I'll do that.
Gustavo Noronha (kov)
Comment 7 2013-08-11 14:19:06 PDT
Note You need to log in before you can comment on or make changes to this bug.