Source/WebKit2/UIProcess/WebProcessProxy.cpp
@@ -306,7 +306,7 @@ void WebProcessProxy::addBackForwardItem(uint64_t itemID, const String& original
 }
 
 #if ENABLE(NETSCAPE_PLUGIN_API)
-void WebProcessProxy::getPlugins(bool refresh, Vector<PluginInfo>& plugins)
+void WebProcessProxy::getPlugins(bool refresh, Vector<PluginInfo>& plugins, Vector<PluginInfo>& applicationPlugins)
 {
     if (refresh)
         m_context->pluginInfoStore().refresh();
@@ -317,8 +317,10 @@ void WebProcessProxy::getPlugins(bool refresh, Vector<PluginInfo>& plugins)
 
 #if ENABLE(PDFKIT_PLUGIN)
     // Add built-in PDF last, so that it's not used when a real plug-in is installed.
-    if (!m_context->omitPDFSupport())
+    if (!m_context->omitPDFSupport()) {
         plugins.append(PDFPlugin::pluginInfo());
+        applicationPlugins.append(PDFPlugin::pluginInfo());
+    }
 #endif
 }
 #endif // ENABLE(NETSCAPE_PLUGIN_API)
